@@ -1,5 +1,10 @@
 Change Log
 	
+
+D6.1.0 20191003 SCL
+- if AUTH_LOCK != 0 or using hardware lock pin, always lock automatically in
+	State A
+	
 20190822 SCL
 - for consistency/safety sake, force reboot after exiting Setup menu
 	
